x/y/2014 ola-0.9.3
 Features:

 Bugs:

 API:

 RDM Tests:

 Internal:


20/8/2014 ola-0.9.2
 Features:
 * Added --use-epoll which uses epoll() rather than select().
 * Added --use-kqueue which uses kqueue() rather than select().
 * Add some more additional slot definitions.
 * Allow the FTDI thread to switch from BAD to GOOD timing granularity.
 * Change the flags so the negated ones are --no-, this mostly affects --nohttp
   and --nohttp-quit in olad
 * Partial Windows support using MinGW. Build instructions are in
   README.mingw32.
   Working:
   * Building simple client applications
   * olad, with the web UI
   * Plugins: Dummy, ArtNet, ShowNet, ESP Net, SandNet, Pathport, OSC, KiNet
   * Python bindings
   Not working yet:
   * all other plugins, especially device-based ones (USB, serial, SPI)
   * Java bindings
 * Use the PID (process ID) and current time to init the random seed - #227
 * Standardise some flags, using --device consistently. This affects
   ola_artnet, ola_e131 and ola_usbpro
 * Remove -l long name short option from ola_artnet as it clashes with the
   global -l log level option. Remove the -e subnet short option too.
 * Allow the SPI RDM responder's device label to be set and store it in the
   preferences file.
 * Added new E1.33 example programs that follow the latest draft document.

 Bugs:
 * Don't build ola_protoc if --with-ola-protoc= is provided.
 * Fix the inter-test delay in the RDM tests to work with values less than 1s.

 Internal:
 * Changed to a non-recursive build. Reduced build times by 5-25%.
 * Convert more of our programs to our flags module
 * Standardise the bool flag behaviour to require an argument like
   string and int do, add a default bool for the old use case.
 * Standardise ArtnetConfigMessages to ArtNetConfigMessages and ripple related changes through.

21/6/2014 ola-0.9.1
 Features:
 * Pretty print IPV4 addresses within the Python RDM code.
 * Add some additional slot definitions and status messages.